--- a/Controltest/MainWindow.xaml
+++ b/Controltest/MainWindow.xaml
@@ -17,7 +17,7 @@
     </Window.Resources>
     <Grid>
         <ListBox HorizontalAlignment="Left" Height="290" Margin="75,125,0,0"  controls:BackgroundSwitchElement.ItemSelectedBackground="Green" controls:BackgroundSwitchElement.MouseHoverBackground="Red" controls:BackgroundSwitchElement.MouseDownBackground="Black" VerticalAlignment="Top" Width="270" ItemsSource="{Binding data}"/>
-        <Button Opacity="2" Content="Button" HorizontalAlignment="Left" controls:BorderElement.CornerRadius="30" Margin="360,85,0,0" VerticalAlignment="Top" Width="110" Height="65" Foreground="White"  controls:IconElement.Width="30" controls:IconElement.Geometry="{StaticResource SubGeometry}"/>
+        <Button Opacity="2" Background="{Binding ElementName=colorPicker,Path=SelectedBrush}" Content="Button" HorizontalAlignment="Left" controls:BorderElement.CornerRadius="30" Margin="535,70,0,0" VerticalAlignment="Top" Width="110" Height="65" Foreground="White"  controls:IconElement.Width="30" controls:IconElement.Geometry="{StaticResource SubGeometry}"/>
         <ToggleButton Margin="1025,250,0,0" controls:ToggleButtonAttach.CheckText="on" controls:ToggleButtonAttach.UnCheckText="off"  Width="95"    Style="{StaticResource ToggleButtonSwitch}" HorizontalAlignment="Left" VerticalAlignment="Top" Height="65"/>
         <ToggleButton Margin="665,164,0,0" controls:ToggleButtonAttach.Text="客流" FontSize="20"     Style="{StaticResource ToggleButtonOpacity}" HorizontalAlignment="Left" VerticalAlignment="Top"  >
             <Rectangle Width="20" Height="20" Fill="Red"/>
@@ -66,7 +66,7 @@
         <StackPanel controls:Growl.Token="InfoMessage" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,10,10,10" SizeChanged="StackPanel_SizeChanged"/>
         <Slider Margin="140,610,696,121" TickFrequency="5" IsSnapToTickEnabled="True" Value="80" Maximum="100" Minimum="0"/>
         <controls:NumericUpDown Margin="1110,22,306,807" />
-        <controls:ColorPicker Name="colorPicker" Margin="97,97,651,291" />
+        <controls:ColorPicker Name="colorPicker" Margin="265,70,1497,543" Background="White" />
         <TextBox Text="This is the content" Margin="48,493,1762,439" />
     </Grid>
 </Window>
