--- a/HjmosControl/Themes/Styles/ToggleButton.xaml
+++ b/HjmosControl/Themes/Styles/ToggleButton.xaml
@@ -34,6 +34,7 @@
     </Style>
     
     <Style x:Key="ToggleButtonCustom" TargetType="ToggleButton">
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryTextBrush}"/>
         <Setter Property="Background" Value="Transparent"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
