--- a/HjmosControl/Themes/Basic/Converters.xaml
+++ b/HjmosControl/Themes/Basic/Converters.xaml
@@ -6,4 +6,6 @@
     <BooleanToVisibilityConverter x:Key="Boolean2VisibilityConverter"/>
     <converter:String2VisibilityReConverter x:Key="String2VisibilityReConverter"/>
     <converter:Color2HexStringConverter x:Key="Color2HexStringConverter"/>
+    <converter:String2VisibilityConverter x:Key="String2VisibilityConverter"/>
+    <converter:Double2GridLengthConverter x:Key="Double2GridLengthConverter"/>
 </ResourceDictionary>
