--- a/HjmosControl/Themes/Styles/Base/LoadingLineBaseStyle.xaml
+++ b/HjmosControl/Themes/Styles/Base/LoadingLineBaseStyle.xaml
@@ -2,11 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:HjmosControl.Controls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Base/TextBoxBaseStyle.xaml"/>
+        <ResourceDictionary Source="LoadingBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
-    <Style TargetType="controls:WatermarkTextBox" BasedOn="{StaticResource WatermarkTextBoxBaseStyle}"/>
-    <Style TargetType="TextBox" BasedOn="{StaticResource TextBoxBaseStyle}"/>
-
-    <Style TargetType="controls:TextBox" BasedOn="{StaticResource TextBoxIcon}"/>
+    <Style TargetType="controls:LoadingLine" BasedOn="{StaticResource LoadingBaseStyle}" x:Key="LoadingLineBaseStyle">
+        <Setter Property="DotDiameter" Value="5"/>
+    </Style>
+    
 </ResourceDictionary>
