--- a/HjmosControl/Themes/Styles/Style.xaml
+++ b/HjmosControl/Themes/Styles/Style.xaml
@@ -18,5 +18,6 @@
         <ResourceDictionary Source="TextBox.xaml"/>
         <ResourceDictionary Source="ColorPicker.xaml"/>
         <ResourceDictionary Source="Loading.xaml"/>
+        <ResourceDictionary Source="PasswordBox.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
