密码框设计

--- a/HjmosControl/Themes/Styles/Base/PasswordBoxBaseStyle.xaml
+++ b/HjmosControl/Themes/Styles/Base/PasswordBoxBaseStyle.xaml
@@ -6,6 +6,7 @@
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../../Basic/Converters.xaml"/>
+        <ResourceDictionary Source="../../Basic/Geometries.xaml"/>
         <ResourceDictionary Source="../TextBlock.xaml"/>
         <ResourceDictionary Source="../Button.xaml"/>
         <ResourceDictionary Source="../ToggleButton.xaml"/>
@@ -82,9 +83,7 @@
         </Setter>
     </Style>
 
-    
-    
-    
+       
     <ControlTemplate TargetType="controls:PasswordBox" x:Key="PasswordBoxPlusLeftTemplate">
         <ControlTemplate.Resources>
             <Storyboard x:Key="StoryboardShow">
@@ -157,7 +156,7 @@
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrush}"/>
         <Setter Property="Foreground" Value="{DynamicResource PrimaryTextBrush}"/>
         <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="controls:BorderElement.CornerRadius" Value="{StaticResource DefaultCornerRadius}"/>
+        <Setter Property="controls:BorderElement.CornerRadius" Value="4"/>
         <Setter Property="PasswordChar" Value="●"/>
         <Setter Property="HorizontalContentAlignment" Value="Left"/>
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
@@ -166,7 +165,7 @@
         <Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="Height" Value="Auto"/>
-        <Setter Property="Padding" Value="{StaticResource DefaultInputPadding}"/>
+        <Setter Property="Padding" Value="8,6"/>
         <Setter Property="controls:PasswordBoxAttach.IsMonitoring" Value="True"/>
         <Setter Property="Focusable" Value="False"/>
         <Setter Property="Template" Value="{StaticResource PasswordBoxPlusLeftTemplate}"/>
