--- a/HjmosControl/Themes/Styles/PasswordBox.xaml
+++ b/HjmosControl/Themes/Styles/PasswordBox.xaml
@@ -2,9 +2,9 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:controls="clr-namespace:HjmosControl.Controls">
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="Base/PasswordBoxBaseStyle"/>
+        <ResourceDictionary Source="Base/PasswordBoxBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 
     <Style TargetType="PasswordBox" BasedOn="{StaticResource PasswordBoxStyle}"/>
-    <Style TargetType="controls:PasswordBox" BasedOn="{StaticResource PasswordBoxsPlusBaseStyle}"/>
+    <Style TargetType="controls:PasswordBox" BasedOn="{StaticResource PasswordBoxPlusBaseStyle}"/>
 </ResourceDictionary>
