日实时客流曲线图表

--- a/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/Style.xaml
@@ -20,6 +20,6 @@
         <ResourceDictionary Source="Loading.xaml"/>
         <ResourceDictionary Source="PasswordBox.xaml"/>
         <ResourceDictionary Source="RadioButton.xaml"/>
-        <!--<ResourceDictionary Source="ButtonGroup.xaml"/>-->
+        <ResourceDictionary Source="ButtonGroup.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
