--- a/Tests/Controltest/App.xaml
+++ b/Tests/Controltest/App.xaml
@@ -2,12 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Controltest"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Window2.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/SkinDefault.xaml"/>
                 <ResourceDictionary Source="pack://application:,,,/Hjmos.BaseControls;component/Themes/Generic.xaml"/>
+                <ResourceDictionary Source="pack://application:,,,/Hjmos.CustomCharts;component/Themes/Generic.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
